# LiveVideoProcessing

./: Cargo.toml
src/: camera.rs  main.rs
src/camera/: camera.rs  list_devices.rs  mod.rs  save.rs
src/ui/: display.rs  mod.rs  root.rs  settings.rs  state.rs  stream.rs
