[package]
name = "liveVideoProcessing"
version = "0.1.0"
edition = "2021"

[dependencies]
# Simple dependencies for FFmpeg integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
egui = "0.32.0"
eframe = "0.32.0"
